<resources>
    <string name="app_name">CSSE Project Mobile Application</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome&#160;</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be at least 4 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="authenticating">Authenticating Please Wait…</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">CSSE Project Mobile App</string>
    <string name="nav_header_subtitle">SLIIT Titans</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Add Cash</string>
    <string name="menu_slideshow">Logout</string>
    <string name="card_holder">Card Holder Name</string>
    <string name="card_number">Card Number</string>
    <string name="amount">Deposit Amount (Rs.) </string>
    <string name="exp_date">Good/Valid Thru</string>
    <string name="cvc">CVC</string>
    <string name="add">Add Cash</string>
    <string name="clear">Reset</string>

    <string name="assets">Your Assets</string>
    <string name="balance">Rs. </string>
</resources>