<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.ui.gallery.GalleryFragment">

    <LinearLayout
        android:layout_width="37dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

    </LinearLayout>

    <LinearLayout
        android:layout_width="329dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextDepositAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/amount"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/editTextCardHolderName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/card_holder"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editTextCardNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/card_number"
                android:inputType="number"
                android:maxLength="16" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="true"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextExpDate"
                android:layout_width="175dp"
                android:layout_height="match_parent"
                android:cursorVisible="false"
                android:hint="@string/exp_date"
                android:inputType="date" />

            <EditText
                android:id="@+id/editTextCVC"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/cvc"
                android:inputType="number"
                android:maxLength="3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonAddCash"
                android:layout_width="175dp"
                android:layout_height="match_parent"
                android:text="@string/add" />

            <Button
                android:id="@+id/buttonReset"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/clear" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"></LinearLayout>

</LinearLayout>